# Flask-Dynamic-DB-Driven-WebApp

./: Calculator.py  LICENSE  README.md  app.py  pyproject.toml
templates/: footer.html  home.html  nav.html
